--- a/package.json
+++ b/package.json
@@ -1,31 +1,30 @@
 {
-  "name": "dreflix",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "clsx": "^2.1.1",
-    "next": "14.2.5",
-    "next-nprogress-bar": "^2.3.13",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-snap-carousel": "^0.4.0"
-  },
-  "devDependencies": {
-    "@radix-ui/react-dialog": "^1.1.1",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "eslint-config-prettier": "^9.1.0",
-    "typescript": "^5"
-  },
-  "packageManager": "pnpm@9.5.0+sha512.140036830124618d624a2187b50d04289d5a087f326c9edfc0ccd733d76c4f52c3a313d4fc148794a2a9d81553016004e6742e8cf850670268a7387fc220c903"
+	"name": "dreflix",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbo",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@radix-ui/react-tooltip": "^1.1.3",
+		"clsx": "^2.1.1",
+		"next": "14.2.14",
+		"next-nprogress-bar": "^2.3.13",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-snap-carousel": "^0.5.0"
+	},
+	"devDependencies": {
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@types/node": "^22.7.4",
+		"@types/react": "^18.3.11",
+		"@types/react-dom": "^18.3.0",
+		"eslint": "^8.0.0",
+		"eslint-config-next": "^14.2.14",
+		"eslint-config-prettier": "^9.1.0",
+		"typescript": "^5.6.2"
+	}
 }
