--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-	"extends": ["eslint-config-prettier", "next/core-web-vitals"],
+	"extends": ["eslint-config-prettier", "next/core-web-vitals","next/typescript"],
 	"rules": {
 		"semi": ["warn", "never"],
 		"jsx-quotes": ["warn", "prefer-double"],
